# FutureGuide

./: memo.md  pyproject.toml
app/: main.py
app/core/: config.py  llm.py  memory.py  planner.py  rag.py  tools.py  vectorstore.py
app/schemas/: chat.py
app/tools/: calculator_tool.py  datetime_tool.py  echo_tool.py  file_loader_tool.py
