[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futureguide-backend"
version = "0.1.0"
description = "Minimal backend-only AI agent (FastAPI)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
]
